# rftp

./: .gitignore  README  autogen.sh  configure.ac  run_all_tests.sh
inc/: connect.h  debug_print.h  err_print.h  file_op.h  ftp_msg.h  helpers.h  login.h  mem_op.h  parser.h  passwd_file.h  setup.h
scripts/: full-debian-package  generate-debian
src/: Makefile  Makefile.am  config_parser.c  config_parser.h  connect.c  connect.h  debug_print.h  file_op.c  file_op.h  ftp_msg.h  helpers.c  helpers.h  logger.c  logger.h  login.c  login.h  main.c  mem_op.c  mem_op.h  parser.c  parser.h  passwd_file.c  setup.c  setup.h  time_op.c  time_op.h
test/: README  basetest.py  connect.py  connect_test.py  connectest.py  cwd-test.py  download_test.py  maintest.py  put-get-test.py  putgettest.py  rename_folder_test.py  renamefoldertest.py  run_all_tests.sh  speed_test.py  speedtest.py  start.sh  testfile.txt
