#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.60])
AC_INIT([server], [0.1], [lekanovic@gmail.com])
AC_CONFIG_SRCDIR([src/connect.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.11.3 -Werror -Wall])

# Checks for programs.
AC_PROG_CC

AC_PROG_RANLIB([src/libiniparser.i686.a])

AM_PROG_CC_C_O
# Checks for libraries.
#AM_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile] [src/Makefile])
AC_OUTPUT
